<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/lblEstado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lblEstado" />

    <Button
        android:id="@+id/btnDescubrir"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnDescubrir" />

    <ListView
        android:id="@+id/lvPeers"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:background="@android:color/holo_blue_light" />

    <Button
        android:id="@+id/btnSeleccionar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnSeleccionar" />

    <ImageView
        android:id="@+id/imgPrev"
        android:layout_width="match_parent"
        android:layout_height="200dp"

        android:contentDescription="@string/imgPrev"
        tools:srcCompat="@tools:sample/avatars" />

    <Button
        android:id="@+id/btnEnviar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnEnviar" />

</LinearLayout>